--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PhoneDialer">
+    tools:context=".PracticalTest01Var03">
 
     <EditText
         android:id="@+id/phone_number_edit_text"
