--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,67 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PhoneDialer">
+    tools:context=".PracticalTest01Var03">
 
     <EditText
-        android:id="@+id/phone_number_edit_text"
+        android:id="@+id/first_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello"
         android:saveEnabled="false"
-        android:gravity="center"/>
+        android:inputType="number"
+        android:gravity="left"/>
+
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:rowCount="1"
+        android:columnCount="4">
+
+        <Button
+            android:id="@+id/plus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:gravity="center"
+            android:text="+"/>
+        <Button
+            android:id="@+id/minus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="2"
+            android:gravity="center"
+            android:text="-"/>
+
+    </GridLayout>
+    <EditText
+        android:id="@+id/second_number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:saveEnabled="false"
+        android:inputType="number"
+        android:gravity="left"/>
+
+    <EditText
+        android:id="@+id/operation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:enabled="false"
+        android:inputType="text"
+        android:saveEnabled="false"
+        android:gravity="left"/>
+
+    <Button
+        android:id="@+id/navigate_second_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="0"
+        android:layout_column="2"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:text="NAVIGATE TO SECOND ACTIVITY"/>
 
 
 </LinearLayout>
