--- a/app/src/main/res/layout/activity_practical_test01_var03_secondary.xml
+++ b/app/src/main/res/layout/activity_practical_test01_var03_secondary.xml
@@ -5,15 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PracticalTest01Var03">
+    tools:context=".PracticalTest01Var03SecondaryActivity">
 
     <EditText
-        android:id="@+id/first_number"
+        android:id="@+id/result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:enabled="false"
+        android:inputType="text"
         android:saveEnabled="false"
-        android:inputType="number"
-        android:gravity="left"/>
+        android:gravity="center"/>
 
     <GridLayout
         android:layout_width="wrap_content"
@@ -23,49 +24,21 @@
         android:columnCount="4">
 
         <Button
-            android:id="@+id/plus"
+            android:id="@+id/correct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="0"
             android:layout_column="1"
             android:gravity="center"
-            android:text="+"/>
+            android:text="CORRECT"/>
         <Button
-            android:id="@+id/minus"
+            android:id="@+id/incorrect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="0"
             android:layout_column="2"
             android:gravity="center"
-            android:text="-"/>
+            android:text="INCORRECT"/>
 
     </GridLayout>
-    <EditText
-        android:id="@+id/second_number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:saveEnabled="false"
-        android:inputType="number"
-        android:gravity="left"/>
-
-    <EditText
-        android:id="@+id/operation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:enabled="false"
-        android:inputType="text"
-        android:saveEnabled="false"
-        android:gravity="left"/>
-
-    <Button
-        android:id="@+id/navigate_second_activity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_row="0"
-        android:layout_column="2"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:text="NAVIGATE TO SECOND ACTIVITY"/>
-
-
 </LinearLayout>
